--- a/apps/play_it_cool_web/assets/package.json
+++ b/apps/play_it_cool_web/assets/package.json
@@ -7,12 +7,20 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
+    "@material-ui/styles": "^4.9.13",
+    "@types/react-redux": "^7.1.8",
+    "@types/react-router-dom": "^5.1.5",
+    "apollo-boost": "^0.4.8",
+    "graphql": "^15.0.0",
     "history": "^4.10.1",
     "phoenix": "file:../../../deps/phoenix",
     "phoenix_html": "file:../../../deps/phoenix_html",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2"
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
