--- a/apps/play_it_cool_web/assets/package.json
+++ b/apps/play_it_cool_web/assets/package.json
@@ -15,8 +15,8 @@
     "clsx": "^1.1.0",
     "graphql": "^15.0.0",
     "history": "^4.10.1",
-    "phoenix": "file:../../../deps/phoenix",
-    "phoenix_html": "file:../../../deps/phoenix_html",
+    "phoenix": "^1.5.1",
+    "phoenix_html": "^2.14.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
