--- a/apps/play_it_cool_web/assets/.prettierrc
+++ b/apps/play_it_cool_web/assets/.prettierrc
@@ -1,5 +1,6 @@
 {
-    "tabWidth": 2,
-    "endOfLine": "lf",
-    "singleQuote": true
+  "tabWidth": 2,
+  "endOfLine": "lf",
+  "singleQuote": true,
+  "printWidth": 110
 }
