--- a/apps/play_it_cool_web/assets/package.json
+++ b/apps/play_it_cool_web/assets/package.json
@@ -12,6 +12,7 @@
     "@types/react-redux": "^7.1.8",
     "@types/react-router-dom": "^5.1.5",
     "apollo-boost": "^0.4.8",
+    "apollo-cache-inmemory": "^1.6.6",
     "clsx": "^1.1.0",
     "graphql": "^15.0.0",
     "history": "^4.10.1",
