--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,21 +17,21 @@ services:
       ADMINER_DEFAULT_SYSTEM: postgres
       ADMINER_DEFAULT_SERVER: postgres
       ADMINER_DESIGN: nette
-  playitcool:
-    depends_on:
-      - postgres
-    build:
-      context: ./
-      args:
-        DATABASE_URL: ecto://testuser:testpassword@postgres:5432/play_it_cool_dev
-        SECRET_KEY_BASE: 32t5rg4387rfg387gtg8we
-        PORT: 4000
-    environment:
-      DATABASE_URL: ecto://testuser:testpassword@postgres:5432/play_it_cool_dev
-      SECRET_KEY_BASE: 32t5rg4387rfg387gtg8we
-      PORT: 4000
-      MIX_ENV: prod
-    working_dir: /app
-    ports:
-      - 80:4000
-    command: ["bin/play_it_cool", "start"]
+  # playitcool:
+  #   depends_on:
+  #     - postgres
+  #   build:
+  #     context: ./
+  #     args:
+  #       DATABASE_URL: ecto://testuser:testpassword@postgres:5432/play_it_cool_dev
+  #       SECRET_KEY_BASE: 32t5rg4387rfg387gtg8we
+  #       PORT: 4000
+  #   environment:
+  #     DATABASE_URL: ecto://testuser:testpassword@postgres:5432/play_it_cool_dev
+  #     SECRET_KEY_BASE: 32t5rg4387rfg387gtg8we
+  #     PORT: 4000
+  #     MIX_ENV: prod
+  #   working_dir: /app
+  #   ports:
+  #     - 80:4000
+  #   command: ["bin/play_it_cool", "start"]
